--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,91 +1,90 @@
 body {
-    font-family: "Proza Libre", "Georgia", sans-serif;
-    font-size: 20px;
-    background-color: darkgrey;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-image: url("../images/init-BG.jpg");
-}
-h1 {
-    float:left;
+     font-family: "Proza Libre", "Georgia", sans-serif;
+     font-size: 20px;
+     background-color: darkgrey;
+     background-size: 100%;
+     background-repeat: no-repeat;
+     background-image: url("../images/init-BG.jpg");
+ }
+ h1 {
+     float: left;
      font-family: "Tangerine", serif;
-    font-size: 86px;
-    margin: 0px;
-    padding: 0;
-    position: relative;
-    z-index: 20;
+     font-size: 86px;
+     margin: 0px;
+     padding: 0;
+     position: relative;
+     z-index: 20;
     color: #fff;
     text-shadow: black -2px 3px 1px;
 }
-h2 {
-}
+
 section {
     color: antiquewhite;
     padding: 4%;
     margin: 0 7% 3% 7%;
     position: relative;  
-    top: -18px;  
-    line-height: 35px;
-    clear: both;
-}
-.sectionBG {
-    background-color: #5A0019;
-    opacity: .85;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-#qText {
-    position: relative;
-}
-.answer {
+     top: -18px;  
+     line-height: 35px;
+     clear: both;
+ }
+ .sectionBG {
+     background-color: #5A0019;
+     opacity: .85;
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+ }
+ #qText {
+     position: relative;
+ }
+ .answer {
     cursor: pointer;
     margin: 5px;
-}
-#result {
+ }
+ #result {
     position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-    width: 100%;
-    height: 100%;
-    background-color: #193441;
-    color: white;
-    padding: 8%;
-    box-sizing: border-box;
-    font-size: 30px;
-    line-height: 42px;
-    background-repeat: no-repeat;
-    background-position: right top; 
-}
-#result.correctResult {
-    background-image: url("../images/check-mark.png");
-     background-size: 250px 250px;
-}
-#result.wrongResult {
-    background-image: url("../images/red-x.png");
-     background-size: 230px 230px;
-}
-#result.timesUp {
-    background-image: url("../images/clock.png");
-     background-size: 230px 230px;
-}
-#result .gameOverText {
-    display: block;
-    font-size: smaller;
-    position: absolute;
-    bottom: 30px;
-    width: 85%;
-}
-button#newGame {
-    position: absolute;
+     top: 0;
+     left: 0;
+     display: none;
+     width: 100%;
+     height: 100%;
+     background-color: #193441;
+     color: white;
+     padding: 8%;
+     box-sizing: border-box;
+     font-size: 30px;
+     line-height: 42px;
+     background-repeat: no-repeat;
+     background-position: right top; 
+ }
+ #result.correctResult {
+     background-image: url("../images/check-mark.png");
+      background-size: 250px 250px;
+ }
+ #result.wrongResult {
+     background-image: url("../images/red-x.png");
+      background-size: 230px 230px;
+ }
+ #result.timesUp {
+     background-image: url("../images/clock.png");
+      background-size: 230px 230px;
+ }
+ #result .gameOverText {
+     display: block;
+     font-size: smaller;
+     position: absolute;
+     bottom: 30px;
+     width: 85%;
+ }
+ button#newGame {
+     position: absolute;
     right: 30px;
     top: 10px;
 }
 
-.scoreBoard {
+.scoreboard {
     float: left;
     margin: 2%;
     background-color: #c5bbac;
@@ -118,25 +117,24 @@ button {
     color: white;
 }
 
-footer {
-}
+
 /* responsive styles! */
 @media screen and (max-width: 750px) {
     #timer {
-        font-size: 12px;
-    }
-    h1 {
-        font-size: 65px;
-    }
-    section {
-        top: 0;
-    }
-}
-@media screen and (max-width: 550px) {
+         font-size: 12px;
+     }
+     h1 {
+         font-size: 65px;
+     }
+     section {
+         top: 0;
+     }
+ }
+ @media screen and (max-width: 550px) {
     #score {
         clear: both;
     }
-    .scoreBoard {
+    .scoreboard {
         width: 35%;
     }
 } 
